cdk.out/localstack.template.json
{
 "Resources": {
  "PatientMangementVPCA87811B8": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "PatientManagementVPC"
     }
    ]
   }
  },
  "PatientMangementVPCPublicSubnet1SubnetA9672A30": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientMangementVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientMangementVPCA87811B8"
    }
   }
  },
  "PatientMangementVPCPublicSubnet1RouteTable81BFF668": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientMangementVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientMangementVPCA87811B8"
    }
   }
  },
  "PatientMangementVPCPublicSubnet1RouteTableAssociation5A13631E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientMangementVPCPublicSubnet1RouteTable81BFF668"
    },
    "SubnetId": {
     "Ref": "PatientMangementVPCPublicSubnet1SubnetA9672A30"
    }
   }
  },
  "PatientMangementVPCPublicSubnet1DefaultRoute44A969E3": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "PatientMangementVPCIGWB73D4777"
    },
    "RouteTableId": {
     "Ref": "PatientMangementVPCPublicSubnet1RouteTable81BFF668"
    }
   },
   "DependsOn": [
    "PatientMangementVPCVPCGW7F6EF81A"
   ]
  },
  "PatientMangementVPCPublicSubnet1EIP2BF33301": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientMangementVPC/PublicSubnet1"
     }
    ]
   }
  },
  "PatientMangementVPCPublicSubnet1NATGateway902748E7": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "PatientMangementVPCPublicSubnet1EIP2BF33301",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "PatientMangementVPCPublicSubnet1SubnetA9672A30"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientMangementVPC/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "PatientMangementVPCPublicSubnet1DefaultRoute44A969E3",
    "PatientMangementVPCPublicSubnet1RouteTableAssociation5A13631E"
   ]
  },
  "PatientMangementVPCPublicSubnet2Subnet8B485EDA": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientMangementVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientMangementVPCA87811B8"
    }
   }
  },
  "PatientMangementVPCPublicSubnet2RouteTableDF80C689": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientMangementVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientMangementVPCA87811B8"
    }
   }
  },
  "PatientMangementVPCPublicSubnet2RouteTableAssociation84E18421": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientMangementVPCPublicSubnet2RouteTableDF80C689"
    },
    "SubnetId": {
     "Ref": "PatientMangementVPCPublicSubnet2Subnet8B485EDA"
    }
   }
  },
  "PatientMangementVPCPublicSubnet2DefaultRoute545B02E5": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "PatientMangementVPCIGWB73D4777"
    },
    "RouteTableId": {
     "Ref": "PatientMangementVPCPublicSubnet2RouteTableDF80C689"
    }
   },
   "DependsOn": [
    "PatientMangementVPCVPCGW7F6EF81A"
   ]
  },
  "PatientMangementVPCPublicSubnet2EIP1F01A97B": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientMangementVPC/PublicSubnet2"
     }
    ]
   }
  },
  "PatientMangementVPCPublicSubnet2NATGateway49823E48": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "PatientMangementVPCPublicSubnet2EIP1F01A97B",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "PatientMangementVPCPublicSubnet2Subnet8B485EDA"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientMangementVPC/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "PatientMangementVPCPublicSubnet2DefaultRoute545B02E5",
    "PatientMangementVPCPublicSubnet2RouteTableAssociation84E18421"
   ]
  },
  "PatientMangementVPCPrivateSubnet1Subnet5F6D9298": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientMangementVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientMangementVPCA87811B8"
    }
   }
  },
  "PatientMangementVPCPrivateSubnet1RouteTableACF9D4DD": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientMangementVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientMangementVPCA87811B8"
    }
   }
  },
  "PatientMangementVPCPrivateSubnet1RouteTableAssociationB9F7FC80": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientMangementVPCPrivateSubnet1RouteTableACF9D4DD"
    },
    "SubnetId": {
     "Ref": "PatientMangementVPCPrivateSubnet1Subnet5F6D9298"
    }
   }
  },
  "PatientMangementVPCPrivateSubnet1DefaultRouteF062E6F5": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "PatientMangementVPCPublicSubnet1NATGateway902748E7"
    },
    "RouteTableId": {
     "Ref": "PatientMangementVPCPrivateSubnet1RouteTableACF9D4DD"
    }
   }
  },
  "PatientMangementVPCPrivateSubnet2Subnet79587360": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientMangementVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientMangementVPCA87811B8"
    }
   }
  },
  "PatientMangementVPCPrivateSubnet2RouteTable64026672": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientMangementVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientMangementVPCA87811B8"
    }
   }
  },
  "PatientMangementVPCPrivateSubnet2RouteTableAssociationC1503F15": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientMangementVPCPrivateSubnet2RouteTable64026672"
    },
    "SubnetId": {
     "Ref": "PatientMangementVPCPrivateSubnet2Subnet79587360"
    }
   }
  },
  "PatientMangementVPCPrivateSubnet2DefaultRoute508FFC99": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "PatientMangementVPCPublicSubnet2NATGateway49823E48"
    },
    "RouteTableId": {
     "Ref": "PatientMangementVPCPrivateSubnet2RouteTable64026672"
    }
   }
  },
  "PatientMangementVPCIGWB73D4777": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "PatientManagementVPC"
     }
    ]
   }
  },
  "PatientMangementVPCVPCGW7F6EF81A": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "PatientMangementVPCIGWB73D4777"
    },
    "VpcId": {
     "Ref": "PatientMangementVPCA87811B8"
    }
   }
  },
  "AuthServiceDBSubnetGroupCFE5A552": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for AuthServiceDB database",
    "SubnetIds": [
     {
      "Ref": "PatientMangementVPCPrivateSubnet1Subnet5F6D9298"
     },
     {
      "Ref": "PatientMangementVPCPrivateSubnet2Subnet79587360"
     }
    ]
   }
  },
  "AuthServiceDBSecurityGroupBE6D28EB": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for AuthServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientMangementVPCA87811B8"
    }
   }
  },
  "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthServiceDBSecretAttachmentF30406A9": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "AuthServiceDBC6B688BA"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "AuthServiceDBC6B688BA": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "auth-service-db",
    "DBSubnetGroupName": {
     "Ref": "AuthServiceDBSubnetGroupCFE5A552"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "AuthServiceDBSecurityGroupBE6D28EB",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "PatientServiceDBSubnetGroupCED49D16": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for PatientServiceDB database",
    "SubnetIds": [
     {
      "Ref": "PatientMangementVPCPrivateSubnet1Subnet5F6D9298"
     },
     {
      "Ref": "PatientMangementVPCPrivateSubnet2Subnet79587360"
     }
    ]
   }
  },
  "PatientServiceDBSecurityGroup6B97C0E5": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for PatientServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientMangementVPCA87811B8"
    }
   }
  },
  "localstackPatientServiceDBSecret20E0A9443fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "PatientServiceDBSecretAttachment90D77B03": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackPatientServiceDBSecret20E0A9443fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "PatientServiceDBB84F9BF9"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "PatientServiceDBB84F9BF9": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "patient-service-db",
    "DBSubnetGroupName": {
     "Ref": "PatientServiceDBSubnetGroupCED49D16"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackPatientServiceDBSecret20E0A9443fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "PatientServiceDBSecurityGroup6B97C0E5",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthServiceDBHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "AuthServiceDBC6B688BA",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "AuthServiceDBC6B688BA",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "PatientServiceDBHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "PatientServiceDBB84F9BF9",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "PatientServiceDBB84F9BF9",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  }
 }
}
